# Personal_Data_Analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  TECHNICAL_WALKTHROUGH.md  main.py  pyproject.toml
data/: sample_sales.csv
data_analyst/: __init__.py  agent.py  bigquery_tools.py  prompts.py  tools.py
